# EUPRICE

./: .env.example  .gitignore  CHANGELOG.md  README.md  audit_report.csv  pyproject.toml
data/: products.csv
db/: schema.sql
db/migrations/: 001_seed_countries_and_shops.sql  002_seed_italy_tigota.sql  003_price_scraped_ean.sql  004_data_quality_log.sql  005_seed_mueller.sql
docs/: ARCHITECTURE.md  METHODOLOGY.md  ROADMAP.md
scraper/: refresh.py
scraper/core/: db.py  env.py  eurostat.py  fetch.py  fx.py  models.py  normalize.py
scraper/spiders/: base.py  dm.py  mueller.py  tigota.py
scripts/: audit_cross_retailer.py  audit_pack_quality.py  capture_missing_eans.py  enrich_images.py  export_for_web.py  find_eans.py  localize_images.py  rescrape_product.py  seed_sample_prices.py  verify_eans_against_obf.py  verify_schema.py
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  opengraph-image.tsx  page.tsx
web/app/about/: page.tsx
web/app/api/products/: route.ts
web/app/basket/: opengraph-image.tsx  page.tsx
web/app/compare/: page.tsx
web/app/map/: MapClient.tsx  page.tsx
web/app/product/[id]/: opengraph-image.tsx  page.tsx
web/components/: EuropeMap.tsx  MinutesOfWorkChart.tsx  NavLink.tsx  PriceBarChart.tsx  PriceHistoryChart.tsx
web/data/: countries.json  eurostat_pli.json  history.json  prices.json  products.json  quality.json
web/lib/: country-codes.ts  db.ts  display.ts  findings.ts
